--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "react-hot-toast": "^2.4.1"
   },
   "scripts": {
-    "start": "HOST=0.0.0.0 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
